src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-omT-ofT-dwU-dhP0.5-b-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nopen maximized: true\nopen floating: true\ndefault column width: U\ndefault window height: P0.5\nborder on\nwant fullscreen: AU"
expression: snapshot
---
initial configure:
size: 0 × 352, bounds: 1272 × 712, states: []

post-map configures:
size: 0 × 352, bounds: 1272 × 712, states: []
size: 1 × 352, bounds: 1272 × 712, states: [Activated]
