src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-omT-ofT-dwU-dhP0.5-wfsBN-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nopen maximized: true\nopen floating: true\ndefault column width: U\ndefault window height: P0.5\nwant fullscreen: BN\ntabbed"
expression: snapshot
---
initial configure:
size: 0 × 360, bounds: 1280 × 720, states: []

post-map configures:
size: 1 × 1, bounds: 1280 × 720, states: [Activated]
